--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "engines": {
-    "version": "16.14.0"
+    "node": "16.14.0"
   },
   "dependencies": {
     "@emotion/react": "^11.10.4",
